# tuxingsun-network-governor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0-alpha.md  ROADMAP.md  SECURITY.md  SESSION_HANDOFF.md  USAGE_LOG_TEMPLATE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: human-lifecycle-prompts.md
profiles/: ai-proxy.yaml  clean-direct.yaml  vpn-compatible.yaml
rules/: direct-domains.yaml  private-cidrs.yaml  proxy-domains.yaml
scripts/: release_guard.py
src/governor/: apply.py  audit.py  backup.py  clash_config.py  cli.py  dns.py  drift.py  generator.py  governance.py  launchd.py  paths.py  ports.py  profiles.py  release_guard.py  report.py  routes.py  system_proxy.py  test_runner.py  utils.py  vpn.py  watcher.py
tests/: test_mvp.py
